<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">圣经助手</string>
    <string name="about_us">\n+ 技术支持：\n - 沈阳以利亚科技有限公司\n - 电话：(024)23491056\n - 邮件：support@elijah.com.cn\n - 网址：http://elijah.cn\n\n</string>
    <string name="system_setting">系统设置</string>
    <string name="restore">还原</string>
    <string name="font_size">经文字号</string>
    <string name="font_size_middle">中等</string>
    <string name="font_size_large">特大</string>
    <string name="auto_download">自动下载</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="history">历史记录</string>
    <string name="clear">清空</string>
    <string name="new_book">新约</string>
    <string name="old_book">旧约</string>

</resources>