<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >
        
        <RelativeLayout 
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title" 
  			android:background="@drawable/title_bar"
  			android:gravity="center_vertical"  >  
  			
            
           	<TextView
       		android:layout_width="wrap_content" 
       		android:layout_height="wrap_content" 
       		android:text="@string/system_setting"
       		android:layout_centerInParent="true"
       		android:textSize="18sp"		
			android:textColor="#ffffff" /> 

  			<Button
            android:id="@+id/btn_restore"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
        	android:layout_alignParentRight="true" 
        	android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/restore"
            android:textSize="14sp"
            android:textColor="#fff"
            android:onClick="onButtonRestoreClick"
            android:background="@drawable/title_btn_right"
            android:visibility="gone"
		    />
			
		</RelativeLayout>

        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"  android:padding="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/font_size"
                android:textColor="#000000"
                android:textSize="18sp"
                 />

            <RadioGroup
                android:id="@+id/radioGroupLectionFontSize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radioLectionFontSize1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/font_size_middle" 
                    android:textColor="#000000"
                    android:layout_marginLeft="20dp"
                    />

                <RadioButton
                    android:id="@+id/radioLectionFontSize2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_size_large" 
                    android:textColor="#000000"
                    android:layout_marginLeft="20dp"  />
                </RadioGroup>

            </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp">


            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_download"
                android:textColor="#000000"
                android:textSize="18sp" 
                android:layout_gravity="center"/>

				<RadioGroup
                android:id="@+id/radioGroupAutoDownload"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radioAutoDownload1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/yes" 
                    android:textColor="#000000"
                    android:layout_marginLeft="20dp"
                    />

                <RadioButton
                    android:id="@+id/radioAutoDownload2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" 
					 android:checked="true"
                    android:textColor="#000000"
                    android:layout_marginLeft="36dp"


                    />

            </RadioGroup>
        </LinearLayout>



            <Button
                android:id="@+id/buttonSave"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:onClick="onButtonSaveClick"
                android:text="@string/save" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_height="wrap_content"
				android:layout_width="match_parent"
                android:onClick="onButtonCancelClick"
                android:text="@string/cancel" 
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/about_us"
                android:textColor="#333333"
                android:autoLink = "web|phone"
                android:visibility="gone"
                />


 </LinearLayout>
