<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >

        <RelativeLayout 
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title" 
  			android:background="@drawable/title_bar"
  			android:gravity="center_vertical"  >  

           	<TextView
       		android:layout_width="wrap_content" 
       		android:layout_height="wrap_content" 
       		android:text="@string/history"
       		android:layout_centerInParent="true"
       		android:textSize="18sp"		
			android:textColor="#ffffff"/> 

  			<Button
            android:id="@+id/btn_clear_history"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
        	android:layout_alignParentRight="true" 
        	android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/clear"
            android:textSize="14sp"
            android:textColor="#fff"
            android:onClick="onButtonClearHistoryClick"
            android:background="@drawable/title_btn_right"
		    />

		</RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:baselineAligned="false"
            android:background="@drawable/bottom_bar">

			<LinearLayout
                android:id="@+id/ll_tab1"
                android:clickable="true"
            	android:layout_width="match_parent"
            	android:layout_height="fill_parent"
              	android:orientation="vertical"
				android:gravity="center"
              	android:layout_weight="1">
                <TextView
                    android:id="@+id/tv1"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:text="@string/old_book"
            		android:gravity="center_vertical"
            		android:textColor="#fff"
            		android:textSize="18sp" />                
        	 </LinearLayout>

			<LinearLayout
                android:id="@+id/ll_tab2"
                android:clickable="true"
            	android:layout_width="match_parent"
            	android:layout_height="fill_parent"
              	android:orientation="vertical"
              	android:gravity="center"
              	android:layout_weight="1">
                <TextView
                    android:id="@+id/tv2"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:text="@string/new_book"
            		android:textColor="#fff"
            		android:textSize="18sp" />                
        	 </LinearLayout>

        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
        	android:id="@+id/tabpager"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_gravity="center"> 
        </androidx.viewpager.widget.ViewPager>

 </LinearLayout>
